--- a/assets/style.css
+++ b/assets/style.css
@@ -2,20 +2,71 @@
     margin: 0px;
 }
 
-
-/********************************************************************************/
-
-
-/* ELEMENT SELECTORS */
-
-
-/********************************************************************************/
-
 html,
 body {
-    height: 100%;
     margin: 0;
     padding: 0;
+    min-width: 100%;
+    width: 100%;
+    max-width: 100%;
+    min-height: 100%;
+    height: 100%;
+    max-height: 100%;
+    font-family: 'Telex', sans-serif;
+}
+
+main {
+    min-height: calc(100vh - 72px);
+    height: calc(100vh - 72px);
+    min-width: 100%;
+    width: 100%;
+}
+
+.home-container {
+    min-height: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+}
+
+.split-left {
+    min-height: 100%;
+    height: 100%;
+    min-width: 40vw;
+    width: 50vw;
+    background: #da2828;
+}
+
+.split-right {
+    min-height: 100%;
+    height: 100%;
+    min-width: 60vw;
+    width: 50vw;
+    background: white;
+}
+
+.head-container {
+    height: 72px;
+    background: #100D19;
+}
+
+.split-head {
+    min-height: 100%;
+    height: 100%;
+    min-width: 60vw;
+    width: 50vw;
+    background: grey;
+}
+
+#hello {
+    font-size: 5em;
+    color: white;
+}
+
+nav {
+    justify-content: center;
+    align-items: center;
+    align-content: center;
 }
 
 nav ul li {
@@ -24,33 +75,10 @@ nav ul li {
 
 a {
     text-decoration: none;
-    color: #C5BCCE;
+    color: #da2828;
+    font-size: 5em;
 }
 
-h1 {
-    display: inline-block;
-    font-size: 200px;
-    color: #3505CB;
-    margin: 0px auto;
-}
-
-form label input {
-    margin: auto;
-}
-
-
-/********************************************************************************/
-
-
-/* CLASS SELECTORS */
-
-
-/********************************************************************************/
-
-.nav-container {
-    height: 100px;
-}
-
-.home-container {
-    height: calc(100vh -100px);
+a:hover {
+    color: grey;
 }
