--- a/style.css
+++ b/style.css
@@ -22,17 +22,21 @@ main {
     width: 100%;
 }
 
-.home-container {
+.home-container,
+.about-container {
     min-height: 100%;
     height: 100%;
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
 }
 
 .split-left {
     min-height: 100%;
     height: 100%;
-    min-width: 40vw;
+    min-width: 50vw;
     width: 50vw;
     background: #da2828;
 }
@@ -40,7 +44,7 @@ main {
 .split-right {
     min-height: 100%;
     height: 100%;
-    min-width: 60vw;
+    min-width: 50vw;
     width: 50vw;
     background: white;
 }
@@ -58,15 +62,10 @@ main {
     background: grey;
 }
 
-#hello {
+#hello,
+#about {
     font-size: 5em;
     color: white;
-}
-
-nav {
-    justify-content: center;
-    align-items: center;
-    align-content: center;
 }
 
 nav ul li {
@@ -77,6 +76,11 @@ a {
     text-decoration: none;
     color: #da2828;
     font-size: 5em;
+}
+
+p {
+    font-size: 1em;
+    text-align: center;
 }
 
 a:hover {
