--- a/style.css
+++ b/style.css
@@ -1,6 +1,31 @@
 /* Applies to all pages */
 
+
+/* latin-ext */
+
+@font-face {
+    font-family: 'Telex';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: local('Telex Regular'), local('Telex-Regular'), url(https://fonts.gstatic.com/s/telex/v8/ieVw2Y1fKWmIO-faDVtSKA.woff2) format('woff2');
+    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+
+
+/* latin */
+
+@font-face {
+    font-family: 'Telex';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: local('Telex Regular'), local('Telex-Regular'), url(https://fonts.gstatic.com/s/telex/v8/ieVw2Y1fKWmIO-fUDVs.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
 * {
+    font-family: 'Telex';
     margin: 0px;
 }
 
@@ -15,81 +40,110 @@ body {
     height: 100%;
     max-height: 100%;
     font-family: 'Telex', sans-serif;
+    background: #F5F7F7;
+    color: #2e293a;
+}
+
+main {
+    min-height: 100%;
+    height: 100%;
+    min-width: 100%;
+    width: 100%;
 }
 
 
 /* Applies to Home and About*/
 
-.home-main,
-.about-main {
-    min-height: calc(100vh - 72px);
-    height: calc(100vh - 72px);
-    min-width: 100%;
-    width: 100%;
+.split-top {
+    min-height: 80%;
+    height: 80%;
+    min-width: 100vw;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
-.home-container,
-.about-container {
-    min-height: 100%;
-    height: 100%;
+.split-top-row {
+    min-height: 80%;
+    height: 80%;
+    min-width: 100vw;
+    width: 100vw;
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
+    justify-content: space-evenly;
 }
 
-.split-left {
+.split-bottom {
+    min-height: 100px;
+    height: 100px;
+    min-width: 100vw;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.cols {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 90%;
+}
+
+
+/* .split-left {
     min-height: 100%;
     height: 100%;
-    min-width: 50vw;
-    width: 50vw;
-    background: #da2828;
+    min-width: 50%;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 .split-right {
     min-height: 100%;
     height: 100%;
-    min-width: 50vw;
-    width: 50vw;
-    background: white;
-}
-
-.head-container {
-    height: 72px;
-    background: #100D19;
-}
-
-.split-head {
-    min-height: 100%;
-    height: 100%;
-    min-width: 60vw;
-    width: 50vw;
-    background: grey;
-}
-
-#hello,
-#about {
-    font-size: 5em;
-    color: white;
-}
+    min-width: 50%;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+} */
 
 nav ul li {
     list-style: none;
+    display: inline-block;
 }
 
 a {
     text-decoration: none;
-    color: #da2828;
-    font-size: 5em;
+    padding: 0px 30px;
+    font-size: 2em;
 }
 
-a:hover {
-    color: grey;
+.ac,
+.wc {
+    justify-content: center;
+    align-content: center;
+    margin-bottom: 20px;
+    padding: 0px 20px;
 }
 
+h1 {
+    font-size: 3em;
+}
 
-/*************************************************************/
+h2 {
+    margin-bottom: 20px;
+}
 
-
-/*Applies to Work */
+#hello {
+    font-size: 10em;
+}
