--- a/style.css
+++ b/style.css
@@ -40,8 +40,7 @@ body {
     height: 100%;
     max-height: 100%;
     font-family: 'Telex', sans-serif;
-    background: #F5F7F7;
-    color: #2e293a;
+    color: #f3f0f0;
 }
 
 main {
@@ -55,8 +54,8 @@ main {
 /* Applies to Home and About*/
 
 .split-top {
-    min-height: 80%;
-    height: 80%;
+    min-height: 80vh;
+    height: 80vh;
     min-width: 100vw;
     width: 100vw;
     display: flex;
@@ -65,19 +64,9 @@ main {
     justify-content: space-evenly;
 }
 
-.split-top-row {
-    min-height: 80%;
-    height: 80%;
-    min-width: 100vw;
-    width: 100vw;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-}
-
 .split-bottom {
-    min-height: 100px;
-    height: 100px;
+    min-height: 20vh;
+    height: 20vh;
     min-width: 100vw;
     width: 100vw;
     display: flex;
@@ -90,12 +79,37 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     width: 90%;
 }
 
+.rows {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+}
 
-/* .split-left {
+.row1 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+}
+
+.row-item {
+    width: 50%;
+    margin: 10px;
+}
+
+#item1 {
+    content: url(./assets/img/plaCRUD1.png);
+}
+
+#item2 {
+    content: url(./assets/img/tpc.png);
+}
+
+.split-left {
     min-height: 100%;
     height: 100%;
     min-width: 50%;
@@ -115,7 +129,7 @@ main {
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-} */
+}
 
 nav ul li {
     list-style: none;
@@ -126,17 +140,21 @@ a {
     text-decoration: none;
     padding: 0px 30px;
     font-size: 2em;
+    font-weight: 300;
+}
+
+a:hover {
+    opacity: 0.75;
 }
 
 .ac,
 .wc {
-    justify-content: center;
-    align-content: center;
     margin-bottom: 20px;
     padding: 0px 20px;
 }
 
 h1 {
+    color: #f3f0f0;
     font-size: 3em;
 }
 
@@ -144,6 +162,32 @@ h2 {
     margin-bottom: 20px;
 }
 
+form {
+    margin: 0px auto;
+}
+
 #hello {
     font-size: 10em;
+}
+
+#background1 {
+    background-image: url(dos.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+#background2 {
+    background-image: url(athens.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+#background3 {
+    background-image: url(diogenes.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+p {
+    font-size: 1.2em;
 }
