--- a/style.css
+++ b/style.css
@@ -1,29 +1,5 @@
 /* Applies to all pages */
 
-
-/* latin-ext */
-
-@font-face {
-    font-family: 'Telex';
-    font-style: normal;
-    font-weight: 400;
-    font-display: swap;
-    src: local('Telex Regular'), local('Telex-Regular'), url(https://fonts.gstatic.com/s/telex/v8/ieVw2Y1fKWmIO-faDVtSKA.woff2) format('woff2');
-    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-}
-
-
-/* latin */
-
-@font-face {
-    font-family: 'Telex';
-    font-style: normal;
-    font-weight: 400;
-    font-display: swap;
-    src: local('Telex Regular'), local('Telex-Regular'), url(https://fonts.gstatic.com/s/telex/v8/ieVw2Y1fKWmIO-fUDVs.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-
 * {
     font-family: 'Telex';
     margin: 0px;
@@ -51,7 +27,54 @@ main {
 }
 
 
-/* Applies to Home and About*/
+/* Typography */
+
+
+/* latin-ext */
+
+@font-face {
+    font-family: 'Telex';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: local('Telex Regular'), local('Telex-Regular'), url(https://fonts.gstatic.com/s/telex/v8/ieVw2Y1fKWmIO-faDVtSKA.woff2) format('woff2');
+    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+
+
+/* latin */
+
+@font-face {
+    font-family: 'Telex';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: local('Telex Regular'), local('Telex-Regular'), url(https://fonts.gstatic.com/s/telex/v8/ieVw2Y1fKWmIO-fUDVs.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+
+/* Headings */
+
+h1 {
+    color: #f3f0f0;
+    font-size: 3em;
+}
+
+h2 {
+    margin-bottom: 20px;
+}
+
+form {
+    margin: 0px auto;
+}
+
+#hello {
+    font-size: 10em;
+}
+
+
+/* Split screen and column structure */
 
 .split-top {
     min-height: 80vh;
@@ -76,6 +99,28 @@ main {
     background-color: #f3f0f0;
 }
 
+*/ .split-left {
+    min-height: 100%;
+    height: 100%;
+    min-width: 50%;
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.split-right {
+    min-height: 100%;
+    height: 100%;
+    min-width: 50%;
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
 .cols {
     display: flex;
     flex-direction: column;
@@ -89,8 +134,7 @@ main {
     padding: 0px 20px;
 }
 
-
-/* .rows {
+#rows {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -115,28 +159,6 @@ main {
 
 #item2 {
     content: url(./assets/img/tpc.png);
-} */
-
-.split-left {
-    min-height: 100%;
-    height: 100%;
-    min-width: 50%;
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-}
-
-.split-right {
-    min-height: 100%;
-    height: 100%;
-    min-width: 50%;
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
 }
 
 
@@ -159,48 +181,28 @@ a:hover {
 }
 
 
-/* Headings */
-
-h1 {
-    color: #f3f0f0;
-    font-size: 3em;
-}
-
-h2 {
-    margin-bottom: 20px;
-}
-
-form {
-    margin: 0px auto;
-}
-
-#hello {
-    font-size: 10em;
-}
-
-
 /* Backgrounds */
 
 #background1 {
-    background-image: url(dos.jpg);
+    background-image: url(./assets/img/dos.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 }
 
 #background2 {
-    background-image: url(athens.jpg);
+    background-image: url(./assets/img/athens.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 }
 
 #background3 {
-    background-image: url(diogenes.jpg);
+    background-image: url(./assets/img/diogenes.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 }
 
 #background4 {
-    background-image: url(diogenes.jpg);
+    background-image: url(./assets/img/diogenes.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 }
