--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,6 @@
 /* Applies to all pages */
 
 * {
-    font-family: 'Telex';
     margin: 0px;
     padding: 0px;
 }
@@ -10,12 +9,10 @@ html,
 body {
     margin: 0;
     padding: 0;
-    min-width: 100%;
-    width: 100%;
-    max-width: 100%;
-    min-height: 100%;
-    height: 100%;
-    max-height: 100%;
+    min-width: 100vw;
+    width: 100vw;
+    min-height: 100vh;
+    height: 100vh;
     font-family: 'Telex', sans-serif;
 }
 
@@ -57,15 +54,21 @@ main {
 /* Headings */
 
 h1 {
-    color: #f3f0f0;
+    color: #39ff14;
     font-size: 3em;
+    text-align: center;
+}
+
+h2 {
+    color: #39ff14;
+    font-size: 1.5em;
     text-align: center;
     margin-bottom: 20px;
 }
 
-h2 {
-    color: #f3f0f0;
-    font-size: 2em;
+h3 {
+    color: #39ff14;
+    font-size: 1.5em;
     text-align: center;
     margin-bottom: 20px;
 }
@@ -74,19 +77,14 @@ h2 {
     font-size: 10em;
 }
 
-#contact,
-#about {
-    text-align: center;
-}
-
 
 /* Split screen and column structure */
 
 .split-top-contact {
-    min-height: 80vh;
-    height: 80vh;
-    min-width: 100vw;
-    width: 100vw;
+    min-height: 80%;
+    height: 80%;
+    min-width: 100%;
+    width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -94,8 +92,8 @@ h2 {
 }
 
 .split-top {
-    min-height: 80vh;
-    height: 80vh;
+    min-height: 80%;
+    height: 80%;
     min-width: 100%;
     width: 100%;
     display: flex;
@@ -105,15 +103,14 @@ h2 {
 }
 
 .split-bottom {
-    min-height: 20vh;
-    height: 20vh;
+    min-height: 20%;
+    height: 20%;
     min-width: 100%;
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #f3f0f0;
 }
 
 */ .split-left {
@@ -130,6 +127,9 @@ h2 {
     width: 50%;
 }
 
+
+/* Column structure */
+
 .cols {
     display: flex;
     flex-direction: column;
@@ -137,12 +137,16 @@ h2 {
     width: 100%;
 }
 
-.ac,
-.wc,
-.cc {
+
+/* General margin and padding */
+
+.mp {
     margin-bottom: 20px;
     padding: 0px 20px;
 }
+
+
+/* Columns on contact page */
 
 .cc {
     height: 33%;
@@ -158,6 +162,7 @@ nav ul li {
 }
 
 a {
+    color: #000000;
     text-decoration: none;
     padding: 0px 30px;
     font-size: 2em;
@@ -165,7 +170,7 @@ a {
 }
 
 a:hover {
-    opacity: 0.75;
+    color: grey;
 }
 
 
@@ -216,4 +221,11 @@ p {
     font-size: 1.4em;
     color: #f3f0f0;
     text-align: center;
+}
+
+
+/* Media queries */
+
+@media screen and (max-width: 732px) {
+    /* *** */
 }
