--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,13 +53,15 @@ main {
 /* Headings */
 
 .h {
+    padding-top: 100px; /* To push heading down from nav */ 
     font-family: 'Vollkorn', serif;
     font-size: 5em;
     text-align: center;
 }
 
-#hello {}
-
+.em{/*Applies only to h2s on about.php*/ 
+    font-size: 4em;
+}
 
 /* Column structure */
 
@@ -125,6 +127,7 @@ nav ul li {
 }
 
 a {
+    font-family: 'Vollkorn', serif;
     color: #333;
     text-decoration: none;
     font-size: 3em;
@@ -145,6 +148,13 @@ a:hover {
 
 form {
     text-align: center;
+}
+
+#submit {
+    height: 50px; 
+    width: 100px; 
+    background-color: #333;
+    color: #fbfbfb;
 }
 
 
